--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=spring-security
 spring.security.user.name=raysi
 spring.security.user.password=raysi
-spring.datasource.url=https://localhost:3306/spring_security
+spring.datasource.url=jdbc:mysql://localhost:3306/response_entity
 spring.datasource.username=root
 spring.datasource.password=Raysi@2002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
